fix(a11y): accent color contrast ratio

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -22,7 +22,7 @@ div {
 	--dark: #17181b;
 	--dark-gray: #30363d;
 	--light-gray: #d0d7de;
-	--blue: #2d82b7;
+	--blue: #0d75de;
 	--red: #e56b6f;
 
 	--inline-code-bg-light: #afb8c133;
